Screwing around js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -20,20 +21,20 @@
                     <button id="ac" type="button">AC</button>
                     <button id="backspace" type="button">Backspace</button>
                     <button id="division" type="button">/</button>
-                    <button id="7" type="button">7</button>
-                    <button id="8" type="button">8</button>
-                    <button id="9" type="button">9</button>
+                    <button value="7" type="button">7</button>
+                    <button value="8" type="button">8</button>
+                    <button value="9" type="button">9</button>
                     <button id="multiplication" type="button">x</button>
-                    <button id="4" type="button">4</button>
-                    <button id="5" type="button">5</button>
-                    <button id="6" type="button">6</button>
+                    <button value="4" type="button">4</button>
+                    <button value="5" type="button">5</button>
+                    <button value="6" type="button">6</button>
                     <button id="subtraction" type="button">-</button>
-                    <button id="1" type="button">1</button>
-                    <button id="2" type="button">2</button>
-                    <button id="3" type="button">3</button>
+                    <button value="1" type="button">1</button>
+                    <button value="2" type="button">2</button>
+                    <button value="3" type="button">3</button>
                     <button id="addition" type="button">+</button>
                     <button id="minus" type="button">+/-</button>
-                    <button id="0" type="button">0</button>
+                    <button value="0" type="button">0</button>
                     <button id="decimal" type="button">.</button>
                     <button id="equal" type="button">=</button>
                 </div>
