--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
             <h1>Calculator</h1>
             <div id="calculator">
                 <div id="display">
-                    <div id="inputDisplay">Input Display</div>
-                    <div id="outputDisplay">Output Display</div>
+                    <div id="inputDisplay"></div>
                 </div>
                 <div id="calculator-container">
-                    <button id="expo" type="button">^</button>
-                    <button id="ac" type="button">AC</button>
-                    <button id="backspace" type="button">Backspace</button>
-                    <button id="division" type="button">/</button>
-                    <button value="7" type="button">7</button>
-                    <button value="8" type="button">8</button>
-                    <button value="9" type="button">9</button>
-                    <button id="multiplication" type="button">x</button>
-                    <button value="4" type="button">4</button>
-                    <button value="5" type="button">5</button>
-                    <button value="6" type="button">6</button>
-                    <button id="subtraction" type="button">-</button>
-                    <button value="1" type="button">1</button>
-                    <button value="2" type="button">2</button>
-                    <button value="3" type="button">3</button>
-                    <button id="addition" type="button">+</button>
-                    <button id="minus" type="button">+/-</button>
-                    <button value="0" type="button">0</button>
-                    <button id="decimal" type="button">.</button>
+                    <button class="operators" type="button">^</button>
+                    <button value="ac" type="button">AC</button>
+                    <button value="backspace" type="button">Backspace</button>
+                    <button class="operators" type="button">/</button>
+                    <button class="numbers" type="button">7</button>
+                    <button class="numbers" type="button">8</button>
+                    <button class="numbers" type="button">9</button>
+                    <button class="operators" type="button">*</button>
+                    <button class="numbers" type="button">4</button>
+                    <button class="numbers" type="button">5</button>
+                    <button class="numbers" type="button">6</button>
+                    <button class="operators" type="button">-</button>
+                    <button class="numbers" type="button">1</button>
+                    <button class="numbers" type="button">2</button>
+                    <button class="numbers" type="button">3</button>
+                    <button class="operators" type="button">+</button>
+                    <button value="minus" type="button">+/-</button>
+                    <button class="numbers" type="button">0</button>
+                    <button value="decimal" type="button">.</button>
                     <button id="equal" type="button">=</button>
                 </div>
             </div>
