Got all the operators working well

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 </div>
                 <div id="calculator-container">
                     <button class="operators" type="button">^</button>
-                    <button value="ac" type="button">AC</button>
-                    <button value="backspace" type="button">Backspace</button>
+                    <button id="ac" type="button">AC</button>
+                    <button id="backspace" type="button">Backspace</button>
                     <button class="operators" type="button">/</button>
                     <button class="numbers" type="button">7</button>
                     <button class="numbers" type="button">8</button>
@@ -32,9 +32,9 @@
                     <button class="numbers" type="button">2</button>
                     <button class="numbers" type="button">3</button>
                     <button class="operators" type="button">+</button>
-                    <button value="minus" type="button">+/-</button>
+                    <button id="minus" type="button">+/-</button>
                     <button class="numbers" type="button">0</button>
-                    <button value="decimal" type="button">.</button>
+                    <button id="dot" type="button">.</button>
                     <button id="equal" type="button">=</button>
                 </div>
             </div>
