--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="calculator-container">
                     <button class="operators" type="button">^</button>
                     <button id="ac" type="button">AC</button>
-                    <button id="backspace" type="button">Backspace</button>
+                    <button id="sqrt" type="button">&#8730</button>
                     <button class="operators" type="button">/</button>
                     <button class="numbers" type="button">7</button>
                     <button class="numbers" type="button">8</button>
