Done with js part

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <div id="container">
             <h1>Calculator</h1>
             <div id="calculator">
-                <div id="display">
-                    <div id="inputDisplay"></div>
-                </div>
+                <div id="inputDisplay"></div>
                 <div id="calculator-container">
                     <button class="operators" type="button">^</button>
                     <button id="ac" type="button">AC</button>
@@ -34,7 +32,7 @@
                     <button class="operators" type="button">+</button>
                     <button id="minus" type="button">+/-</button>
                     <button class="numbers" type="button">0</button>
-                    <button id="dot" type="button">.</button>
+                    <!--<button id="dot" type="button">.</button>-->
                     <button id="equal" type="button">=</button>
                 </div>
             </div>
