--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <div id="container">
-            <h1>Calculator</h1>
-            <div id="calculator">
-                <div id="inputDisplay"></div>
-                <div id="calculator-container">
+        <h1>Calculator</h1>
+        <div id="calculator">
+            <div id="calculator-container">
+                <div id="inputDisplay">0</div>
+                <div id="numpad">
                     <button class="operators" type="button">^</button>
-                    <button id="ac" type="button">AC</button>
+                    <button id="ac" style="background-color: rgb(255, 92, 80);" type="button">AC</button>
                     <button id="sqrt" type="button">&#8730</button>
                     <button class="operators" type="button">/</button>
                     <button class="numbers" type="button">7</button>
@@ -36,6 +37,8 @@
                     <button id="equal" type="button">=</button>
                 </div>
             </div>
+        </div>
     </div>
+    <footer><span>&#169; </span> 2021 Calculator By <a href="https://github.com/thantko20">Thant Ko Zaw</a></footer>
 </body>
 </html>
